# style

./: Cargo.toml  all-properties.en.csv  properties.md
proc/: Cargo.toml
proc/src/: lib.rs
scripts/: Cargo.toml
scripts/src/: main.rs
shared/: Cargo.toml
shared/src/: codegen.rs  color.rs  lib.rs  parse.rs  string.rs  syn_parse.rs
src/: lib.rs
