[package]
name = "style-shared"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.11", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
bumpalo = { version = "3.1.2", optional = true }
